--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,6 @@ select {
 
 .container {
   text-align: center;
-  margin: 0 2em;
   margin-bottom: 4em;
 }
 
@@ -92,13 +91,13 @@ select {
   margin-top: 4em;
 }
 
-.header__title {
+.header-title {
   line-height: 1.8rem;
   color: var(--dark-magenta);
   margin-bottom: .5em;
 }
 
-.header__about {
+.header-about {
   line-height: 1.4rem;
   color: var(--dark-gray-magenta);
   margin-bottom: 2em;
@@ -133,17 +132,21 @@ select {
   color: var(--soft-pink)
 }
 
+.rating-cards {
+  margin-bottom: 2em;
+}
+
+.rating-cards, .review-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 2em;
+}
+
 /*
 ================
 =HELPER CLASSES=
 ================
 */
-
-.card-group {
-  display: flex;
-  flex-direction: column;
-  gap: 2em;
-}
 
 .base-card {
   color: white;
@@ -163,6 +166,29 @@ select {
 =MEDIA QUERIES=
 ===============
 */
+
+@media only screen 
+and (min-width : 950px) {
+  .container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-areas:
+    'heading ... stars'
+    'reviews reviews reviews';
+  }
+
+  .heading-txt {
+    grid-area: heading;
+  }
+
+  .rating-cards {
+    grid-area: stars;
+  }
+
+  .review-cards {
+    grid-area: reviews;
+  }
+}
 
 /* Remove all animations and transitions for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
