--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap");
 
+/* TODO: Fix sizing and placement in desktop */
+
 :root {
   --dark-magenta: hsl(300, 43%, 22%);
   --soft-pink: hsl(333, 80%, 67%);
@@ -170,13 +172,22 @@ select {
 */
 
 @media only screen 
-and (min-width : 950px) {
+and (min-width : 1001px) {
+  .main-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-height: 80vh;
+    margin: 0 auto;
+    max-width: 80em;
+  }
+
   .container {
     display: grid;
 
+    justify-content: center;
     align-items: center;
     min-height: 100vh;
-    margin: 0em 10em;
 
     grid-template-areas:
     'heading ... stars'
